text alignment fixed

--- a/envorior/static/css/publicstyle.css
+++ b/envorior/static/css/publicstyle.css
@@ -39,6 +39,10 @@ a {
   text-decoration: none;
 }
 
+p{
+  margin-bottom: 0rem;
+}
+
 /* ######################     PUBLIC ZONE CSS      ######################## */
 
 
